--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -31,8 +31,8 @@ jobs:
     - name: Run tests
       run: |
         python runtests.py
-    - uses: codecov/codecov-action@v3
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-        fail_ci_if_error: true
-        verbose: true
+    - name: Coverage
+      run: |
+        codecov
+      env:
+        CODECOV_TOKEN: ${{ secrets.SECRET_CODECOV_TOKEN }}
