--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -10,7 +10,7 @@ permissions:
 jobs:
   pypi-publish:
     name: Publish package to PyPI
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     environment:
       name: release
       url: https://pypi.org/p/qtapputils
