--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -27,6 +27,6 @@ jobs:
         python -m pip install --upgrade pip
         pip install build
     - name: Build package
-      run: python -m build
+      run: python -m build --sdist --wheel
     - name: Publish package to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
